Add scheduled groups feature: implement meeting status logic, create scheduled groups page, and update navigation links

--- a/templates/create_group.html
+++ b/templates/create_group.html
@@ -38,7 +38,7 @@
             <a class="nav-link active" href="{{ url_for('dashboard') }}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Scheduled</a>
+            <a class="nav-link" href="{{ url_for('scheduled') }}">Scheduled</a>
           </li>
         </ul>
         <ul class="navbar-nav">
